--- a/package.json
+++ b/package.json
@@ -9,15 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@reduxjs/toolkit": "^1.9.6",
+    "@reduxjs/toolkit": "^1.9.7",
     "axios": "^1.5.1",
+    "bufferutil": "^4.0.7",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
     "next": "latest",
     "next-redux-wrapper": "^8.1.0",
     "react": "latest",
     "react-dom": "latest",
-    "react-redux": "^8.1.3"
+    "react-redux": "^8.1.3",
+    "socket.io-client": "^4.7.2"
   },
   "devDependencies": {
     "autoprefixer": "latest",
